--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -11,8 +11,11 @@ body {
 
 .carousel-wrap ul {
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   transition: all 0.3s ease;
+}
+.carousel-wrap .swipe {
+  transition: all 0.1s ease;
 }
 
 .carousel-wrap .no-animation {
